[gd_scene load_steps=9 format=2]

[ext_resource path="res://core/combat/Combat.gd" type="Script" id=1]
[ext_resource path="res://core/combat/TurnQueue.gd" type="Script" id=2]
[ext_resource path="res://theme/theme.tres" type="Theme" id=3]
[ext_resource path="res://core/combat/interface/UI.gd" type="Script" id=4]
[ext_resource path="res://core/combat/interface/Info.tscn" type="PackedScene" id=5]
[ext_resource path="res://core/ui/Selector.gd" type="Script" id=6]

[sub_resource type="GDScript" id=1]
script/source = "extends Node2D

func add_combatant(new_combatant):
	new_combatant.position.x += 200 * get_child_count()
	add_child(new_combatant)
"

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.12549, 0.164706, 0.137255, 1 )

[node name="Combat" type="Node2D"]
script = ExtResource( 1 )

[node name="Combatants" type="Node2D" parent="."]
position = Vector2( 1880, 256 )
script = SubResource( 1 )

[node name="TurnQueue" type="Node" parent="."]
script = ExtResource( 2 )
combatants_list = NodePath("../Combatants")

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
offset = Vector2( 640, 360 )

[node name="Selector" type="ItemList" parent="."]
visible = false
margin_left = 976.0
margin_top = 256.0
margin_right = 1280.0
margin_bottom = 720.0
custom_colors/guide_color = Color( 0.560784, 0.14902, 0.14902, 1 )
custom_styles/bg = SubResource( 2 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerPlaceHolder" type="Node2D" parent="."]
position = Vector2( 672, 64 )

[node name="PlaceHolder1" type="Node2D" parent="PlayerPlaceHolder"]
position = Vector2( 0, 64 )

[node name="PlaceHolder2" type="Node2D" parent="PlayerPlaceHolder"]
position = Vector2( 32, 128 )

[node name="PlaceHolder3" type="Node2D" parent="PlayerPlaceHolder"]
position = Vector2( 64, 192 )

[node name="PlaceHolder4" type="Node2D" parent="PlayerPlaceHolder"]
position = Vector2( 96, 64 )

[node name="PlaceHolder5" type="Node2D" parent="PlayerPlaceHolder"]
position = Vector2( 128, 128 )

[node name="PlaceHolder6" type="Node2D" parent="PlayerPlaceHolder"]
position = Vector2( 160, 192 )

[node name="EnemyPlaceHolder" type="Node2D" parent="."]
position = Vector2( 416, 64 )

[node name="PlaceHolder1" type="Node2D" parent="EnemyPlaceHolder"]
position = Vector2( 96, 64 )

[node name="PlaceHolder2" type="Node2D" parent="EnemyPlaceHolder"]
position = Vector2( 128, 128 )

[node name="PlaceHolder3" type="Node2D" parent="EnemyPlaceHolder"]
position = Vector2( 160, 192 )

[node name="PlaceHolder4" type="Node2D" parent="EnemyPlaceHolder"]
position = Vector2( 0, 64 )

[node name="PlaceHolder5" type="Node2D" parent="EnemyPlaceHolder"]
position = Vector2( 32, 128 )

[node name="PlaceHolder6" type="Node2D" parent="EnemyPlaceHolder"]
position = Vector2( 64, 192 )

[node name="UI" type="Control" parent="."]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
theme = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
combatants_node = NodePath("../Combatants")
info_scene = ExtResource( 5 )

[node name="Combatants" type="HBoxContainer" parent="UI"]
margin_top = 77.0
margin_right = 1280.0
margin_bottom = 328.0
custom_constants/separation = 360
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="PanelContainer" parent="UI"]
margin_left = 80.0
margin_top = 376.0
margin_right = 1200.0
margin_bottom = 698.0

[node name="GridContainer" type="GridContainer" parent="UI/Buttons"]
margin_left = 90.0
margin_top = 35.0
margin_right = 1030.0
margin_bottom = 277.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Attack" type="Button" parent="UI/Buttons/GridContainer"]
margin_right = 468.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Attack"

[node name="Defend" type="Button" parent="UI/Buttons/GridContainer"]
margin_left = 472.0
margin_right = 940.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Defend"

[node name="Flee" type="Button" parent="UI/Buttons/GridContainer"]
margin_top = 123.0
margin_right = 468.0
margin_bottom = 242.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Flee"

[connection signal="button_up" from="UI/Buttons/GridContainer/Attack" to="UI" method="_on_Attack_button_up"]
[connection signal="button_up" from="UI/Buttons/GridContainer/Defend" to="UI" method="_on_Defend_button_up"]
[connection signal="button_up" from="UI/Buttons/GridContainer/Flee" to="UI" method="_on_Flee_button_up"]
